revert secrets
