# tsoa/swagger.json
@@ -1022,17 +1022,14 @@
 						"type": "string",
 						"nullable": true
 					},
-<<<<<<< HEAD
 					"avatar_url": {
 						"type": "string"
 					}
-=======
-					"avatar_url": {}
->>>>>>> ee112209047e565a0edcec16b0dcf6259d930946
 				},
 				"required": [
 					"firstname",
-					"lastname"
+					"lastname",
+					"avatar_url"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
